Migrate codebase from JavaScript to TypeScript

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 <script type="module">
 
-import { GameRenderer } from './GameRenderer.js'
-import { CELL, GRID_W, GRID_H } from './GlobalGameReference.js'
+import { GameRenderer } from './dist/GameRenderer.js'
+import { CELL, GRID_W, GRID_H } from './dist/GlobalGameReference.js'
 
 const config = {
   type: Phaser.AUTO,
